# samskara-reader

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix
src/: main.rs  mcp.rs
