[package]
name = "samskara-reader"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "samskara-reader"
path = "src/main.rs"

[dependencies]
samskara-core = { path = "../samskara-core" }
criome-cozo = { path = "../criome-cozo" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
